added classname and css to trip list

--- a/src/App.css
+++ b/src/App.css
@@ -96,3 +96,9 @@ input:focus {
   color: red; 
   /* animation: rotation 10s linear infinite; */
 } 
+
+.trip{
+  border-style: ridge;
+  border-color: 85bb65;
+  width: 75%;
+}
