--- a/src/App.css
+++ b/src/App.css
@@ -74,6 +74,7 @@ input:focus {
 .flag-pic{
   height: 20vh;
   width: 40vh;
+  border-style: solid;
 }
 
 .trip-show{
@@ -100,5 +101,11 @@ input:focus {
 .trip{
   border-style: ridge;
   border-color: 85bb65;
-  width: 75%;
+  width
+  : 75%;
+}
+
+.trip:hover{
+  color: green;
+  cursor: pointer;
 }
