--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  font-family: "Arial"
 }
 
 .App-logo {
@@ -150,3 +151,9 @@ input:focus {
   90% { transform: translate(1px, 2px) rotate(0deg); }
   100% { transform: translate(1px, -2px) rotate(-1deg); }
 } */
+
+.title{
+  color: green;
+  font-weight: bolder;
+  font-family: "Times New Roman";
+}
