--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
-  font-family: "Arial"
+  font-family: "Arial";
+  background-color: #474B4F;
 }
 
 .App-logo {
@@ -38,17 +39,19 @@
   }
 }
 
-.Sub-Container {
-  border-style: inset;
-  border-color: #85bb65;
+.Dashboard-Container {
+  border-style: solid;
+  border-color: #61892f;
   border-radius: 5%;
   height: 50vh;
   width: 65vh;
-  background-color: #f8f7dd;
+  background-color: #222629;
+  color: #86c232;
 }
 
 .homepage {
   display: grid;
+  background-color: #222629;
 }
 
 .credential-form {
@@ -122,7 +125,7 @@ input:focus {
 }
 
 .link{
-  color: black;
+  color: #6b6e70;
   /* border-style: underline; */
   /* border-color: black; */
   border-radius: 5%;
