--- a/src/App.css
+++ b/src/App.css
@@ -47,23 +47,38 @@
   width: 65vh;
   background-color: #222629;
   color: #86c232;
+  font-family: Cochin;
+  line-height: 1.1;
 }
 
-.homepage {
-  display: grid;
+.Homepage {
   background-color: #222629;
 }
 
-.credential-form {
+.credential-page {
+  background-color: #474b4f;
+  margin: 0%;
+  background-image: url('https://miro.medium.com/max/4000/0*5pQvYqNzgfYxrYVP.jpg');
+}
+
+.login-form {
+  margin: 1%;
+  padding: 1%;
   border-style: solid;
-  border-color: #85bb65;
-  border-radius: 5%;
-  height: 40vh;
-  width: 100vh;
+  border-color: #6b6e70;
+  border-radius: 2%;
+  background-color: #222629;
+  color: #86c232;
+  height: 35vh;
+  width: 45vw;
+  text-align: center;
+  box-shadow: 5px 5px;
 }
 
 input:focus {
-  background-color: rgb(38, 255, 38);
+  background-color: #86c232;
+  color: #222629;
+  zoom: 101%;
 }
 
 .form-prof {
@@ -71,8 +86,19 @@ input:focus {
   width: 5%;
 }
 
-#signup-form{
-  height: 55vh
+.signup-form{
+  margin: 1%;
+  padding: 1%;
+  height: 55vh;
+  width: 45vw;
+  border-style: solid;
+  border-color: #6b6e70;
+  border-width: 2px;
+  border-radius: 2%;
+  background-color: #222629;
+  color: #86c232;
+  text-align: center;
+  box-shadow: 5px 5px;
 }
 
 .flag-pic{
@@ -88,18 +114,8 @@ input:focus {
   width: 75vw;
 }
 
-/* @keyframes rotation {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(359deg);
-  }
-} */
-
 .unauthorized{
   color: red; 
-  /* animation: rotation 10s linear infinite; */
 } 
 
 .trip{
@@ -126,8 +142,6 @@ input:focus {
 
 .link{
   color: #6b6e70;
-  /* border-style: underline; */
-  /* border-color: black; */
   border-radius: 5%;
 }
 
@@ -136,29 +150,12 @@ input:focus {
   border-style: solid;
 }
 
-/* .unauthorized:hover {
-  animation: shake 0.5s;
-  animation-iteration-count: infinite;
-}
-
-@keyframes shake {
-  0% { transform: translate(1px, 1px) rotate(0deg); }
-  10% { transform: translate(-1px, -2px) rotate(-1deg); }
-  20% { transform: translate(-3px, 0px) rotate(1deg); }
-  30% { transform: translate(3px, 2px) rotate(0deg); }
-  40% { transform: translate(1px, -1px) rotate(1deg); }
-  50% { transform: translate(-1px, 2px) rotate(-1deg); }
-  60% { transform: translate(-3px, 1px) rotate(0deg); }
-  70% { transform: translate(3px, 1px) rotate(-1deg); }
-  80% { transform: translate(-1px, -1px) rotate(1deg); }
-  90% { transform: translate(1px, 2px) rotate(0deg); }
-  100% { transform: translate(1px, -2px) rotate(-1deg); }
-} */
-
 .title{
-  color: green;
-  font-weight: bolder;
-  font-family: "Times New Roman";
+  color: #86c232;
+  padding: 1%;
+  margin: 0%;
+  font-weight: bold;
+  font-family: monospace;
 }
 
 .all-countries-li{
