added prev trips container

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
   background-color: #474B4F;
 }
 
+.body{
+  background-color: #282c34;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -142,7 +146,7 @@ input:focus {
 }
 
 .trip:hover{
-  color: green;
+  color: #86c232;
   cursor: pointer;
   border-style: solid;
 }
