--- a/src/App.css
+++ b/src/App.css
@@ -45,14 +45,15 @@
 
 .Dashboard-Container {
   border-style: solid;
-  border-color: #61892f;
-  border-radius: 5%;
+  border-color: #6b6e70;
+  border-radius: 2%;
   height: 45vh;
   width: 45vw;
   background-color: #222629;
   color: #86c232;
   font-family: Cochin;
   line-height: 1.1;
+  box-shadow: 5px 5px;
 }
 
 .navbar{
@@ -65,7 +66,9 @@
 .Homepage {
   padding: 1%;
   margin: 0%;
-  background-color: #252024;
+  /* background-color: #252024; */
+  background-image: url('https://miro.medium.com/max/4000/0*5pQvYqNzgfYxrYVP.jpg');
+  /* background-image: linear-gradient(rgb(37,32,36), rgba(255, 255, 255, 0));  */
   display: grid;
   grid-column-gap: 1px;
   grid-row-gap: 10px;
@@ -122,17 +125,57 @@ input:focus {
   box-shadow: 5px 5px;
 }
 
+.Add-Trip-Div{
+  border-style: solid;
+  border-color: #6b6e70;
+  border-width: 2px;
+  border-radius: 2%;
+  color: #86c232;
+  text-align: left;
+  box-shadow: 5px 5px;
+  height: 45vh;
+  width: 45vw;
+  font-family: Cochin;
+  background-color: #222629;
+
+}
+
+.Add-Trip-Form{
+  margin: 1%;
+}
+
+.pe-form-and-trip-rates{
+  display: flex;
+  flex-direction: column;
+}
+
 .flag-pic{
   height: 20vh;
   width: 35vh;
   border-style: hidden;
 }
 
+.trip-show-container{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
 .trip-show{
+  height: 100vh;
+  width: 60vw;
   border-style: solid;
-  border-color: #85bb65;
-  border-radius: 5%;
-  width: 75vw;
+  border-color: #86c232;
+  border-radius: 2%;
+  color: #86c232;
+  background-color: #6b6e70;
+  box-shadow: 5px 5px;
+  font-family: Cochin;
+  line-height: 0.9;
+}
+
+.planned-expense-form{
+  color: #86c232;
+  width: 35vw;
 }
 
 .unauthorized{
