updated text color in trip show

--- a/src/App.css
+++ b/src/App.css
@@ -167,7 +167,7 @@ input:focus {
   border-style: solid;
   border-color: #86c232;
   border-radius: 2%;
-  color: #86c232;
+  color: white;
   background-color: #6b6e70;
   box-shadow: 5px 5px;
   font-family: Cochin;
