--- a/src/App.css
+++ b/src/App.css
@@ -209,15 +209,26 @@ input:focus {
   line-height: 0.9;
 }
 
-.planned-expense-form{
+.planned-expense-div{
   color: white;
-  width: 35vw;
+  width: 38vw;
   border-style: solid;
   border-radius: 2%;
   background-color: #222629;
   box-shadow: 5px 5px;
   border-color: #86c232;
   margin-bottom: 2%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.planned-expense-form{
+  text-align: center;
+}
+
+.pe-h2{
+  margin: 1%;
 }
 
 .historical-rates{
@@ -225,10 +236,14 @@ input:focus {
   border-color: #86c232;
   color: white;
   border-radius: 2%;
-  width: 35vw;
+  width: 38vw;
   background-color: #222629;
   box-shadow: 5px 5px;
   flex-grow: 1;
+}
+
+.hr-info{
+  margin-left: 5%;
 }
 
 .unauthorized{
