--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,10 @@
   box-shadow: 5px 5px;
 }
 
+.sub-dash-container-div{
+  margin-left: 5%;
+}
+
 .delete-past-trip{
   border-style: solid;
   color: red;
@@ -161,7 +165,6 @@ input:focus {
 .Add-Trip-Div{
   border-style: solid;
   border-color: #6b6e70;
-  border-width: 2px;
   border-radius: 2%;
   color: #86c232;
   text-align: left;
@@ -170,7 +173,9 @@ input:focus {
   width: 45vw;
   font-family: Cochin;
   background-color: #222629;
-
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .Add-Trip-Form{
