updated formatting for add trip form

--- a/src/App.css
+++ b/src/App.css
@@ -175,12 +175,12 @@ input:focus {
   background-color: #222629;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
 }
 
-.Add-Trip-Form{
+/* .Add-Trip-Form{
   margin: 1%;
-}
+} */
 
 .pe-form-and-trip-rates{
   display: flex;
