--- a/src/App.css
+++ b/src/App.css
@@ -441,7 +441,8 @@ i {
 
 .all-destinations-list{
   background-color: #252024;
-  color: #86c232
+  color: #86c232;
+  margin-left: 2%;
 }
 
 .all-dest{
