--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,22 @@
+html{
+  height:100vh;
+  overflow: auto;
+  border: 1px solid red;
+}
+
+body{
+  font-family: "Ubuntu", sans-serif;
+  background-color: #282c34;
+  height: 100%;
+  border: 1px solid green;
+  background-size: cover;
+  background-image: url(./images/MountainBackground.jpg);
+}
+
 .App {
   text-align: center;
   background-color: #474B4F;
-}
-
-.body{
-  font-family: "Ubuntu", sans-serif;
-  background-color: #282c34;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  border: 1px solid orange;
 }
 
 .App-header {
@@ -34,15 +34,6 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 .Dashboard-Container {
   border-style: solid;
   border-color: #6b6e70;
@@ -54,7 +45,7 @@
   line-height: 1.1;
   box-shadow: 5px 5px;
   margin-bottom: 5%;
-  /* font-family: 'Ubuntu', sans-serif; */
+  font-family: 'Ubuntu', sans-serif;
 }
 
 .sub-dash-container-div{
@@ -74,7 +65,7 @@
 }
 
 .navbar{
-  background-color: #252024;
+  background-color: black;
   color: #86c232;
   text-align: right;
   padding-right: 10vh;
@@ -83,9 +74,7 @@
 .Homepage {
   padding: 1%;
   margin: 0%;
-  /* background-color: #474b4f; */
   background-image: url('https://miro.medium.com/max/4000/0*5pQvYqNzgfYxrYVP.jpg');
-  /* background-image: linear-gradient(rgb(37,32,36), rgba(255, 255, 255, 0));  */
   display: flex;
   height: 100vh;
   justify-content: space-evenly;
@@ -109,20 +98,22 @@
   height: 57vh;
 }
 
+/* content from title page 
+==================================================================================================
+*/
+
 .credential-page {
   font-family: "Ubuntu", sans-serif;
   display: flex;
-  height: 100vh;
+  height: 100%;
   flex-direction: column;
-  justify-content: space-evenly;
-  background-color: #474b4f;
+  justify-content: flex-start;
   margin: 0%;
-  background-image: url('https://miro.medium.com/max/4000/0*5pQvYqNzgfYxrYVP.jpg');
+  border: 1px solid yellow;
 }
 
 .title-div{
   text-align: center;
-  /* position: relative; */
   margin: auto;
   height: 20vh;
   width: 45vw;
@@ -137,7 +128,6 @@
 
 .login-form-div {
   margin: auto;
-  margin-bottom: 1%;
   border-style: solid;
   border-color: #6b6e70;
   border-radius: 2%;
@@ -150,25 +140,14 @@
 }
 
 .login-form{
-  /* margin: auto; */
-  font-size: 25px;
+  /* font-size: 25px; */
 }
 
-input:focus {
-  background-color: #86c232;
-  color: #222629;
-  zoom: 101%;
-}
 
-.form-prof {
-  height: 5%;
-  width: 5%;
-}
-
-.signup-form{
+.signup-form-div{
   margin: auto;
-  height: 45vh;
-  width: 45vw;
+  height: 40%;
+  width: 45%;
   border-style: solid;
   border-color: #6b6e70;
   border-width: 2px;
@@ -177,6 +156,22 @@ input:focus {
   color: #86c232;
   text-align: center;
   box-shadow: 5px 5px;
+  overflow: auto;
+}
+
+.signup-form{
+  text-align: right;
+  padding-right: 30%;
+  border-style: solid;
+}
+/* 
+End Creential Page Elements
+================================================================================================ */
+
+
+input:focus {
+  background-color: #86c232;
+  color: #222629;
 }
 
 .Add-Trip-Div{
