--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ body{
   font-family: "Ubuntu", sans-serif;
   background-color: #282c34;
   height: 100%;
-  border: 1px solid green;
+  border: 1px solid blue;
   background-size: cover;
   background-image: url(./images/MountainBackground.jpg);
 }
@@ -23,22 +23,19 @@ body {
 .App {
   text-align: center;
   background-color: #474B4F;
+  height: 100%;
+}
+
+.route-components{
   border: 1px solid orange;
+  height: 99%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
+.navbar{
+  background-color: black;
+  color: #86c232;
+  text-align: right;
+  padding-right: 10vh;
 }
 
 .Dashboard-Container {
@@ -71,12 +68,6 @@ body {
   cursor: pointer;
 }
 
-.navbar{
-  background-color: black;
-  color: #86c232;
-  text-align: right;
-  padding-right: 10vh;
-}
 
 .Homepage {
   padding: 1%;
@@ -111,7 +102,7 @@ body {
 
 .credential-page {
   display: flex;
-  min-height: 90vh;
+  min-height: 100%;
   flex-direction: column;
   justify-content: space-evenly;
   margin: 0%;
@@ -139,6 +130,7 @@ body {
   background: linear-gradient(rgba(112, 100, 92, 1), rgba(92, 100, 112,1) );
   height: 25%;
   width: 35%;
+  margin-bottom: 10px;
   text-align: center;
   box-shadow: 5px 5px;
   color: white;
