--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,10 @@
-/* html{
-  height:100vh;
-  overflow: auto;
-  border: 1px solid red;
-} */
-
 body{
   font-family: "Ubuntu", sans-serif;
   background-color: #282c34;
-  height: 100%;
-  border: 1px solid blue;
-  background-size: cover;
-  background-image: url(./images/MountainBackground.jpg);
 }
 
-html{
-  height: 100%;
-}
-body {
-  min-height: 100%;
-}
+html, body {margin:0;padding:0;height:100%;}
+
 
 .App {
   text-align: center;
@@ -27,8 +13,8 @@ body {
 }
 
 .route-components{
-  border: 1px solid orange;
-  height: 99%;
+  height: 97vh;
+  
 }
 
 .navbar{
@@ -36,6 +22,7 @@ body {
   color: #86c232;
   text-align: right;
   padding-right: 10vh;
+  height: 3vh;
 }
 
 .Dashboard-Container {
@@ -102,44 +89,46 @@ body {
 
 .credential-page {
   display: flex;
-  min-height: 100%;
+  height: 100%;
   flex-direction: column;
-  justify-content: space-evenly;
-  margin: 0%;
-}
-
-.title-div{
-  text-align: center;
-  margin: auto;
-  height: 20%;
-  width: 45%;
+  align-items: center;
+  justify-content: flex-start;
+  background-size: cover;
+  background-image: url(./images/MountainBackground.jpg);
+  border: 1px solid red;
 }
 
 .title{
   font-family: 'Racing Sans One', cursive;
   color: #cc3a00;
-  margin: 5%;
   font-size: 100px;
+  border: 1px solid orange;
+  /* height: 10%; */
+  margin:2%;
 }
 
 .login-form-div {
-  margin: auto;
   border-style: solid;
   border-color: #27333f;
   border-radius: 2%;
   background: linear-gradient(rgba(112, 100, 92, 1), rgba(92, 100, 112,1) );
-  height: 25%;
-  width: 35%;
-  margin-bottom: 10px;
   text-align: center;
   box-shadow: 5px 5px;
   color: white;
+  width: 35%;
+  border: 1px solid red;
+  margin: 2%;
+}
+
+.login-form{
+  padding: 2%;
+}
+
+h1.login-form{
+  color: green;
 }
 
 .signup-form-div{
-  margin: auto;
-  height: 40%;
-  width: 35%;
   border-style: solid;
   border-color: #27333f;
   border-width: 2px;
@@ -148,12 +137,12 @@ body {
   color: white;
   text-align: center;
   box-shadow: 5px 5px;
-  overflow: auto;
+  /* margin-bottom: 1.5%; */
+  width: 35%;
+  border: 1px solid red;
 }
 
 .signup-form{
-  text-align: right;
-  padding-right: 30%;
 }
 /* 
 End title/credential page elements
