--- a/src/TripShow.css
+++ b/src/TripShow.css
@@ -4,12 +4,16 @@
 .trip-show-container{
     background-image: url('./images/forestMountainBackground.jpg');
     background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
     display: flex;
     justify-content: space-around;
+    padding: 20px;
 }
 
 .trip-show{
-    height: 95vh;
+    height: 100%;
+    min-height: 770px;
     width: 55vw;
     border-style: solid;
     border-color: #86c232;
