--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@ html, body {margin:0;padding:0;height:100%;}
 .credential-page {
   display: flex;
   height: 100%;
+  min-height: 800px;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
