--- a/src/Dashboard.css
+++ b/src/Dashboard.css
@@ -25,7 +25,7 @@
   border-style: solid;
   border-color: #6b6e70;
   border-radius: 2%;
-  background: linear-gradient(rgba(0, 0, 0, .5), rgba(255, 255, 255,1) );
+  background: linear-gradient(rgba(0, 0, 0, .8), rgba(255, 255, 255,.8) );
   line-height: 1.1;
   box-shadow: 5px 5px;
   margin-bottom: 3%;
@@ -78,7 +78,7 @@
 }
 
 .trip:hover{
-  color: #15485f;
+  color: white;
   cursor: pointer;
   border-color: #15485f;
 }
