--- a/src/TripShow.css
+++ b/src/TripShow.css
@@ -10,6 +10,9 @@
     justify-content: space-around;
     padding: 20px;
     border: 1px solid red;
+    height: 100%;
+    min-height: 850px;
+    min-width: 500px;
 }
 
 .trip-show{
